apps/librechat/base/librechat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librechat
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: librechat
  template:
    metadata:
      labels:
        app: librechat
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: type
                    operator: In
                    values:
                      - app-worker
      containers:
        - name: librechat
          image: ghcr.io/danny-avila/librechat:latest
          ports:
            - containerPort: 3080
          resources:
            requests:
              cpu: "2"
              memory: "4Gi"
            limits:
              cpu: "2"
              memory: "6Gi"
          volumeMounts:
            - name: config-yaml
              mountPath: "/app/librechat.yaml"
              subPath: "librechat.yaml"
              readOnly: true
            - name: image-volume
              mountPath: "/app/client/public/images"
          securityContext:
            runAsUser: 1000
            runAsGroup: 3000
      volumes:
        - name: config-yaml
          configMap:
            name: librechat-config
        - name: image-volume
          persistentVolumeClaim:
            claimName: librechat-images-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: librechat
spec:
  clusterIP: None
  selector:
    app: librechat
  ports:
    - port: 3080
      protocol: TCP
