apps/librechat/base/pgvector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vectordb
spec:
  selector:
    matchLabels:
      app: vectordb
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: vectordb
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: type
                    operator: In
                    values:
                      - app-worker
      containers:
        - name: vectordb
          image: ankane/pgvector:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: storage
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: librechat-vectordb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: vectordb
spec:
  type: ClusterIP
  selector:
    app: vectordb
  ports:
    - port: 5432
      name: http
