apps/librechat/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: librechat-backend-route
spec:
  parentRefs:
    - name: louis-gateway
      namespace: louis
      sectionName: https-librechat
  hostnames:
    - librechat.inspection.alpha.canada.ca
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: librechat
          port: 3080
