apps/librechat/base/librechat-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: librechat-internal-ingress
  annotations:
    lbipam.cilium.io/ips: 10.140.79.13
    ingress.cilium.io/loadbalancer-mode: dedicated
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: cilium
  tls:
  - hosts:
    - librechat.inspection.alpha.canada.ca
    secretName: librechat-tls
  rules:
    - host: librechat.inspection.alpha.canada.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: librechat
                port:
                  number: 3080
